<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="20dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/foreign_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/back_border"
        app:layout_constraintBottom_toTopOf="@id/divider_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="12dp"
        >
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/content_description_foreign"
            android:layout_gravity="center_vertical"
            android:src="@drawable/us_flag" />
        <TextView
            android:id="@+id/text_foreign"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:textSize="32sp"
            android:text="@string/foreign_word"
            android:layout_marginStart="20dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mongolian_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/back_border"
        app:layout_constraintTop_toBottomOf="@id/divider_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        >
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/mongolian_flag"
            android:src="@drawable/mongolian_flag" />
        <TextView
            android:id="@+id/text_mongolian"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:textSize="32sp"
            android:text="@string/mongolian_word"
            android:layout_marginStart="20dp"
            />
    </LinearLayout>

    <View
        android:id="@+id/divider_view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="20dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/prev_btn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/pre_button"
            android:maxLines="1"
            android:textColor="@color/white"
            android:background="@drawable/ltr_gradient"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textStyle="bold"
            android:text="@string/button_text_edit"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/main_blue"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/add"
            android:backgroundTint="@color/main_blue"
            android:onClick="navigateToAddWordActivity"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textStyle="bold"
            android:text="@string/delete"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/main_blue"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/next_btn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/next_button"
            android:maxLines="1"
            android:textColor="@color/white"
            android:background="@drawable/rtl_gradient"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>